Add daily video

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -656,6 +656,12 @@ footer {
   bottom: 0;
 }
 
+.video-section {
+  p {
+    margin: 20px 0;
+  }
+}
+
 /* --------------  ICONS -------------- */
 
 .icon {
